# sbdk-dev

./: .gitignore  CLAUDE-FLOW-BUILD-INSTRUCTIONS.md  CLAUDE-FLOW-PYTHON.md  CLI_ARCHITECTURE_DESIGN.md  DEMO_PROJECT_OPTIMIZATION_COMPLETE.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_ALIGNMENT_COMPLETE.md  DOCUMENTATION_CLEANUP_SCRIPT.py  FINAL_DOCUMENTATION_ALIGNMENT.md  HIVE_MIND_OPTIMIZATION_SUMMARY.md  LICENSE  MANIFEST.in  PROJECT_OPTIMIZATION_ANALYSIS.md  README.md  error.md  errors.md  main.py  my_project_analysis_report.md  prompts.md  pyproject.toml  requirements-dev.txt  requirements.txt  sbdk_config_template.json  setup.py  test_sbdk_config.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: python-publish.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_BINARY.md  CONFIGURATION.md  CONFIGURATION_SCHEMA.md  DBT_MODELS.md  DLT_PIPELINE_ARCHITECTURE.md  GITHUB_RELEASE_WORKFLOW.md  SERVER_CLI_GUIDE.md
duckdb-dev-env/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
duckdb-dev-env/notebooks/: quickstart.ipynb
duckdb-dev-env/src/: pipeline.py
duckdb-dev-env/tests/: test_cli_commands.py  test_data_quality.py  test_dlt_duckdb.py  test_fastapi_webhooks.py  test_integration.py
examples/demo_project/: OPTIMIZE_DATABASES.md  README.md
examples/demo_project/dbt/: dbt_project.yml
examples/demo_project/dbt/models/staging/: stg_events.sql
examples/demo_project/fastapi_server/: webhook_listener.py
examples/demo_project/pipelines/: events.py  orders.py  users.py
memory/: performance_optimization_report.md
memory/agents/: README.md
memory/sessions/: README.md
my_project/: comprehensive_test_plan.md  demo_dbt_fix.py  email_uniqueness_test_results.json  post_fix_validation_report.md  run_dbt.py  sbdk_config.json  test_analysis_report.txt  test_results.txt  validate_dbt_fix.py
my_project/.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
my_project/dbt/models/staging/: stg_orders.sql
my_project/fastapi_server/: webhook_listener.py
my_project/pipelines/: users.py
sbdk/: __init__.py
sbdk-dev/: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements-dev.txt
sbdk-dev/docs/: ARCHITECTURE.md  CI_CD_GUIDE.md  CONFIGURATION_SCHEMA.md  DBT_MODELS.md  UV_INSTALLATION_GUIDE.md
sbdk-dev/examples/demo_project/: README.md  USAGE_GUIDE.md  optimize_demo.sh  sbdk_config.json
sbdk-dev/examples/demo_project/data/: README.md
sbdk-dev/examples/demo_project/fastapi_server/: webhook_listener.py
sbdk-dev/examples/demo_project/pipelines/: users.py
sbdk-dev/examples/my_project_fixed/: run_dbt_fixed.py  test_dbt_runner.py  test_email_uniqueness_fix.py
sbdk-dev/examples/my_project_fixed/scripts/: README.md  dbt_runner.py  dbt_utils.py  example_dbt_usage.py  run_dbt.py
sbdk-dev/sbdk/: __init__.py
sbdk-dev/sbdk/cli/: __init__.py  dbt_utils.py  debug.py  dev.py  enhanced_components.py  init.py  main.py  start.py  webhooks.py
sbdk-dev/sbdk/cli/commands/: __init__.py  dev.py  init.py  run.py  start.py
sbdk-dev/sbdk/cli/visual/: app.py
sbdk-dev/sbdk/core/: __init__.py  config.py  project.py
sbdk-dev/sbdk/templates/dbt/: dbt_project.yml
sbdk-dev/sbdk/templates/dbt/models/: _sources.yml
sbdk-dev/sbdk/templates/fastapi_server/: webhook_listener.py
sbdk-dev/sbdk/templates/pipelines/: events.py  orders.py  users.py
sbdk-dev/sbdk_dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sbdk-dev/tests/: test_cli_comprehensive.py  test_comprehensive_coverage.py  test_dbt_integration.py  test_e2e_full_workflow.py  test_end_to_end_integration.py  test_installation_packaging.py  test_interactive_flows.py  test_package.py  test_performance_benchmarks.py  test_pipelines.py  test_validation_framework.py  test_visual_cli_robust.py
sbdk-starter/: LICENSE  README.md  main.py  sbdk_config.json
sbdk-starter/cli/: dev.py  init.py  start.py
sbdk-starter/dbt/: dbt_project.yml
sbdk-starter/dbt/models/marts/: user_metrics.sql
sbdk-starter/demo_project/: sbdk_config.json
sbdk-starter/demo_project/data/: demo_project.duckdb
sbdk-starter/demo_project/dbt/models/: _sources.yml
sbdk/cli/: __init__.py  dbt_utils.py  debug.py  enhanced_components.py  integration_layer.py  interactive.py  main.py  visual_cli_robust.py
sbdk/cli/commands/: __init__.py  dev.py  init.py  run.py  start.py  webhooks.py
sbdk/cli/visual/: __init__.py  app.py  components.py  renderer.py
sbdk/core/: __init__.py  config.py
sbdk/templates/: requirements.txt
sbdk/templates/dbt/: dbt_project.yml
sbdk/templates/dbt/models/: _sources.yml
sbdk/templates/fastapi_server/: webhook_listener.py
sbdk/templates/pipelines/: events.py  orders.py  users.py
tests/: test_cli_comprehensive.py  test_comprehensive_coverage.py  test_dbt_integration.py  test_e2e_full_workflow.py  test_end_to_end_integration.py  test_init_command.py  test_installation_packaging.py  test_integration_with_fixes.py  test_interactive_flows.py  test_package.py  test_performance_benchmarks.py  test_pipelines.py  test_validation_framework.py  test_visual_cli_robust.py
video-automation/: hybrid-recording-setup.md  quick-start.sh  record-demo.js  terminal-setup.sh  video-scripts.md  video1-30second-setup.md
video-automation/branding/: BRAND_SYSTEM.md  VIDEO_MARKETING_COPY.md  VIDEO_PRODUCTION_GUIDE.md  VIDEO_SCRIPTS.md  VIDEO_SERIES_PLAN.md  VISUAL_ASSETS_SPECIFICATIONS.md
(+7 files in other folders)
