[project]
name = "duckdb-dev-env"
version = "0.1.0"
description = "DLT + DuckDB dev environment with UV and Hive-Swarm patterns."
requires-python = ">=3.10"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
